samples/_failures_safe/1761656506_6304de_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4f1dc45b.c: In function ‘main’:
./samples/SAFE/__tmp_4f1dc45b.c:151:5: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  151 |     size_t total_size
      |     ^~~~~~
./samples/SAFE/__tmp_4f1dc45b.c:151:5: error: expected declaration or statement at end of input
